--- a/whats_fresh/whats_fresh_api/static/css/style.css
+++ b/whats_fresh/whats_fresh_api/static/css/style.css
@@ -63,6 +63,13 @@ a {
   width: 100%;
   margin: 0px auto;
   font-weight: 700; }
+  .header .site_image {
+    position: absolute;
+    top: 5px;
+    bottom: 5px;
+    margin-left: 350px;
+    max-height: 90px;
+    max-width: 200px; }
   .header h2 {
     line-height: 70px;
     text-align: center;
