--- a/whats_fresh/whats_fresh_api/templates/base.html
+++ b/whats_fresh/whats_fresh_api/templates/base.html
@@ -20,9 +20,9 @@
         <div class="header">
             {% block header %}
             {% endblock header%}
+            <a><img class='site_image' src="{{ 'logo'|get_fieldname }}"></a>
             <h2><a href='/entry'>{{ 'site_title'|get_fieldname }}</a></h2>
             <h4>{% firstof 'slogan'|get_fieldname "" %}</h4>
-            <a><img src="{{ 'logo'|get_fieldname }}"></a>
             {% if user.is_authenticated %}
             <a class='logout' href='/logout'>Logout</a>
             {% endif %}
