duplicate slugs throws errors

--- a/whats_fresh/whats_fresh_api/static/css/style.css
+++ b/whats_fresh/whats_fresh_api/static/css/style.css
@@ -70,7 +70,7 @@ a {
     margin-left: 350px;
     max-height: 90px;
     max-width: 200px; }
-  .header h2 {
+  .header a {
     line-height: 70px;
     text-align: center;
     color: #333; }
