--- a/whats_fresh/whats_fresh_api/templates/base.html
+++ b/whats_fresh/whats_fresh_api/templates/base.html
@@ -30,7 +30,7 @@
         {
           background-color: {{ 'header_color' | get_fieldname }};
         }
-        .header h2
+        .header a
         {
           color: {{ 'font_color' | get_fieldname }};
         }
