--- a/whats_fresh/whats_fresh_api/templates/base.html
+++ b/whats_fresh/whats_fresh_api/templates/base.html
@@ -5,7 +5,7 @@
         {% load get_fieldname %}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>{% site_title %} | {{ title }}</title>
+		<title>{{ 'site_title'|get_fieldname }} | {{ title }}</title>
         <link rel="icon" type="image/png" href="/static/favicon.png">
         <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,300italic' rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Open+Sans:300&effect=3d-float' rel='stylesheet' type='text/css'>
