list.html: "click to edit or add a new one"

--- a/whats_fresh/whats_fresh_api/templates/list.html
+++ b/whats_fresh/whats_fresh_api/templates/list.html
@@ -10,7 +10,7 @@
 
 {% block title %}
 <h2 class='light'>{{ title }}</h2>
-<p class='light accent'>Click on the {{ item_classification }} to edit it or add a <span class="new"><a href='{{ new_url }}'>{{ new_text }}</a></span></p>
+<p class='light accent'>Click to edit or add a <span class="new"><a href='{{ new_url }}'>New One</a></span></p>
 {% endblock title %}
 
 {% block content %}
