--- a/whats_fresh/whats_fresh_api/static/css/style.css
+++ b/whats_fresh/whats_fresh_api/static/css/style.css
@@ -64,20 +64,28 @@ a {
   margin: 0px auto;
   font-weight: 700; }
   .header .site_image {
-    position: absolute;
-    top: 5px;
-    bottom: 5px;
-    margin-left: 350px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     max-height: 90px;
-    max-width: 200px; }
-  .header a {
-    line-height: 70px;
-    text-align: center;
-    color: #333; }
+    max-width: 250px;
+    float: left;
+  }
+  .header h2 {
+      line-height: 70px;
+      text-align: center;
+      color: #333; }
   .header h4 {
-    line-height: 30px;
+    line-height: 20px;
     text-align: center;
     color: #333; }
+  .header #header_site h2 {
+    margin: auto;
+    font-size: 30pt;
+  }
+  .header #header_site h4 {
+    margin: auto;
+    font-size: 18pt;
+  }
   .header .logout {
     position: absolute;
     right: 20px;
