changes to theme model test

--- a/whats_fresh/whats_fresh_api/templates/base.html
+++ b/whats_fresh/whats_fresh_api/templates/base.html
@@ -53,7 +53,7 @@
             {% endif %}
             <div id="header_site">
             <h2><a href='/entry'>{{ 'site_title'|get_fieldname }}</a></h2>
-            <h4>{% firstof 'slogan'|get_fieldname "" %}</h4>
+            <h4>{{ 'slogan'|get_fieldname }}</h4>
             </div>
             {% if user.is_authenticated %}
             <a class='logout' href='/logout'>Logout</a>
