--- a/whats_fresh/whats_fresh_api/templates/list.html
+++ b/whats_fresh/whats_fresh_api/templates/list.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <form class="form" action="">
-    <input type="text" name="search">
+    <input id="search_list" type="text" name="search" value="{{ search_text }}">
     <input type="submit" value="Search">
 </form><br>
 <div class='message'><h4 class='light accent'>{{ message }}</h4></div>
@@ -57,3 +57,7 @@
 </div>
     </div>
 {% endblock content %}
+
+<script>
+$('#search_list').attr("value", "kokab");
+</script>
