server returns generalized 'name' popup form: title 'New Entry'

--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -117,7 +117,7 @@
         headers: { 'X-CSRFToken': '{{ csrf_token }}' },
         success: function(data) {
 
-          $("#popup").html(data).dialog({modal:true}, {title: "New {{ 'preparations'|get_fieldname }}"}, {resizable: true}, {width: 'auto'}, {draggable: false}).dialog('open');
+          $("#popup").html(data).dialog({modal:true}, {title: "New Entry"}, {resizable: true}, {width: 'auto'}, {draggable: false}).dialog('open');
         }
       });
       return false;
