form title redirects to list

--- a/whats_fresh/whats_fresh_api/templates/list.html
+++ b/whats_fresh/whats_fresh_api/templates/list.html
@@ -9,7 +9,7 @@
 {% endblock header %}
 
 {% block title %}
-<h2 class='light'>{{ title }}</h2>
+<h2 class='light'><a href="/entry/{{list_url}}" >{{ title }}</a></h2>
 <p class='light accent'>Click to edit or add a <span class="new"><a href='{{ new_url }}'>New One</a></span></p>
 {% endblock title %}
 
