--- a/whats_fresh/whats_fresh_api/templates/list.html
+++ b/whats_fresh/whats_fresh_api/templates/list.html
@@ -9,14 +9,14 @@
 {% endblock header %}
 
 {% block title %}
-<h2 class='light'><a href="/entry/{{list_url}}" >{{ title }}</a></h2>
+<h2 class='light'><a id="form-title"href="/entry/{{list_url}}">{{ title }}</a></h2>
 <p class='light accent'>Click to edit or add a <span class="new"><a href='{{ new_url }}'>New One</a></span></p>
 {% endblock title %}
 
 {% block content %}
-<form class="form" action="">
-    <input id="search_list" type="text" name="search" {% if search_text %} value="{{ search_text }}" {% endif %}>
-    <input type="submit" value="Search">
+<form class="search-bar" action="">
+    <input id="search-list" type="text" name="search" {% if search_text %} value="{{ search_text }}" {% endif %}>
+    <button id="search-btn" type="submit">Search</button>
 </form><br>
 <div class='message'><h4 class='light accent'>{{ message }}</h4></div>
     <div class='list'>
