--- a/whats_fresh/whats_fresh_api/templates/product_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/product_ajax.html
@@ -46,7 +46,7 @@
         {% if existing_preparations %}
         {% for prep in existing_preparations %}
         <div class="prep">
-            <a href="#" onclick="deletePreparation(this);return false;"><img class="delete" src="{% static 'delete.png' %}" />Delete</a>
+            <a href="#" onclick="deletePreparation(this);return false;"><i class="delete material-icons">delete</i></a>
             <select disabled id="existing{{ prep.id }}" class="prep_select">
                 <option value="{{ prep.id }}">{{ prep.name }}</option>
             </select>
@@ -71,7 +71,7 @@
             <option value="{{ preparation.id }}">{{ preparation.name }}</option>
             {% endfor %}
         </select>
-        <a href="#" onclick="deletePreparation(this);return false;"><img class="delete" src="{% static 'delete.png' %}" /></a>
+        <a href="#" onclick="deletePreparation(this);return false;"><i class="delete material-icons">delete</i></a>
     </div>
 </div>
 
