Don't use rawgit

--- a/whats_fresh/whats_fresh_api/templates/base.html
+++ b/whats_fresh/whats_fresh_api/templates/base.html
@@ -12,8 +12,8 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
         <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
-        <script src="//rawgit.com/tschuy/jquery-locationpicker-plugin/master/src/locationpicker.jquery.js"></script>
         {% load staticfiles %}
+        <script src="{% static 'js/locationpicker/locationpicker.jquery.js' %}"></script>
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     </head>
